# xxx-doc-tools

./: requirements.txt  udt.py
backend/diff-pdf/: CMakeLists.txt  diff-pdf.cpp
backend/diff-pdf/win32/: collect-dlls.sh
config/: config.py
services/: PDFBasicErrorCheck.py  PDFDiff.py  PDFTableCompare.py
utils/: utils.py
views/: BasicErrorCheckPanel.py  CompareDialog.py  OutputWidget.py  PDFPreviewer.py  ProgressBar.py  TableComparePanel.py
